[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CloudOptEnv"
version = "0.1.0"
description = "Cloud Infrastructure Cost Optimization Environment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openenv-core[server]",
    "pydantic",
    "openai",
    "numpy"
]
[project.scripts]
server = "server.app:main"